@@ -1,0 +1,118 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- Configuration Parameters -->
+  <CommandClass id="112">
+    <Value type="byte" index="2" genre="config" label="doorbell ringtone repetitions" units="" min="1" max="255" value="2">
+      <Help>
+      Set the repetitions for playing doorbell ringtone.  
+      Value=1 to 255, the range of repetition is 1 to 100.  
+      Note: If the time of playing doorbell ringtone is more than 20s, 
+      the volume of ringtone will reduce to silence no matter how 
+      many repetitions of doorbell ringtone are set.
+      </Help>
+    </Value>
+    <Value type="byte" index="5" genre="config" label="Default Doorbell Ringtone" units="" min="1" max="100" value="1">
+      <Help>
+      Set the default doorbell ringtone. 
+      Value=1-100, Specify the ringtone as default.
+      </Help>
+    </Value>
+    <Value type="byte" index="6" genre="user" label="Play Ringtone" units="" min="0" max="255" value="0">
+      <Help>
+      Select a ringtone to play. 
+      Value=0, stop playing. 
+      Value=1-100, play the specified ringtone. 
+      Value=255, play the default ringtone. 
+      Value=other, ignore. 
+      </Help>
+    </Value>
+    <Value type="list" index="7" genre="user" label="Control" units="" value="2" size="1">
+      <Help>
+      Playback Control
+      </Help>
+      <Item label="Play" value="1" />
+      <Item label="Stop" value="2" />
+      <Item label="Pause" value="3" />
+      <Item label="Next" value="4" />
+      <Item label="Previous" value="5" />
+    </Value>
+    <Value type="byte" index="8" genre="config" label="Volume" units="" min="0" max="10" value="10">
+      <Help>
+      Set the volume of ringtone.
+      </Help>
+    </Value>
+    <Value type="list" index="10" genre="config" label="Swap Buttons" units="" min="0" max="1" size="1" value="0">
+      <Help>
+      Define functions of "Button -"  and "Button+".  
+      Button - is previous, Button+ is next. 
+      </Help>
+      <Item label="Standard" value="0" />
+      <Item label="Reversed" value="1" />
+    </Value>
+    <Value type="list" index="11" genre="config" label="Button Short/Long Press Function" units="" min="0" max="1" size="1" value="0">
+      <Help>
+      Define functions of "Button -"  and "Button+" when short 
+      pressing and long pressing it. 
+      </Help>
+      <Item label="Short Press - Volume, Long Press - RingTone" value="0" />
+      <Item label="Short Press - RingTone, Long Press - Volume" value="1" />
+    </Value>
+    <Value type="list" index="42" genre="config" label="Wireless Button Status" units="" size="1" value="0" read_only="true">
+      <Help>
+      Get Wireless Button Battery Status
+      </Help>
+      <Item label="Normal Battery Level" value="0" />
+      <Item label="Low Battery Level" value="255" />
+    </Value>
+    <Value type="list" index="80" genre="config" label="Notification status" units="" min="0" max="2" size="1" value="2">
+      <Help>Defines the automated status notification of an associated device when status changes</Help>
+      <Item label="Nothing" value="0" />
+      <Item label="Hail" value="1" />
+      <Item label="Basic" value="2" />
+    </Value>
+    <Value type="list" index="81" genre="config" label="Low Battery Notification status" units="" min="0" max="1" size="1" value="1">
+      <Help>Defines the automated status notification of an associated device when the wireless button battery level changes</Help>
+      <Item label="Nothing" value="0" />
+      <Item label="Configuration Paramater 42" value="1" />
+    </Value>
+    <Value type="list" index="241" genre="config" label="Pair Wireless Button" units="" size="4" value="0">
+      <Help>
+      Pair the Wireless Button with Doorbell. 
+      Value=0x55555555, Start the Wireless Button pairing mode and 
+      the blue Led will blink slowly, short press the Wireless Button 
+      once, if the blue Led change to be solid, which means the pairing 
+      is successful. Otherwise, repeat the steps. 
+      It will automatically exit the pairing mode after 8s if there is no 
+      pressing action of the Wireless Button. 
+      Note: 
+      You can send this configuration Get CC to ask the pairing result: 
+      If configuration report value=0x00000000, which means the 
+      pairing is failed. 
+      If configuration report value =0xFFFFFFFF, which means the 
+      pairing is successful.
+      </Help>
+      <Item label="Start Pairing/Paired" value="0xFFFFFFFF"/>
+      <Item label="Not Pairing/Unpaired" value="0"/>
+    </Value>
+    <Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+      <Help>Enable/disable Configuration Locked</Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="1"/>
+    </Value>
+    <Value type="int" index="255" genre="config" label="Reset default configuration" units="" value="0" write_only="true" affects="all">
+      <Help>
+	Reset to the default configuration.
+      </Help>
+    </Value>
+  </CommandClass>
+
+
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="2">
+      <Group index="1" max_associations="5" label="DoorBell Status" auto="true" />
+      <Group index="2" max_associations="5" label="Transmit" />
+    </Associations>
+  </CommandClass>
+</Product>
+
