@@ -1,0 +1,78 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- Configuration Parameters -->
+  <CommandClass id="112">
+    <Value type="list" index="1" genre="config" label="Sensor Binary report" units="" size="1" value="0">
+      <Help>
+      Which value of the Sensor Binary Report will be sent when
+      the Sensor is triggered On.
+      </Help>
+      <Item label="Sensor Binary Report 0xFF" value="0"/>
+      <Item label="Sensor Binary Report 0x00" value="1"/>
+    </Value>
+    <Value type="list" index="2" genre="config" label="Enable/Disable Wakeup at Poweron" units="" size="1" value="1">
+      <Help>
+      Enable/disable wake up 10 minutes when re-power on the
+      Sensor.
+      </Help>
+      <Item label="Disabled" value="0"/>
+      <Item label="Enabled" value="1"/>
+    </Value>
+    <Value type="list" index="3" genre="config" label="Basic report" units="" size="1" value="0">
+      <Help>
+      Which value of the Basic Report will be sent when
+      the Sensor is triggered On.
+      </Help>
+      <Item label="Basic Report 0xFF" value="0"/>
+      <Item label="Basic Report 0x00" value="1"/>
+    </Value>
+    <Value type="byte" index="39" genre="config" label="Low Battery Level" units="%" min="10" max="50" value="10">
+      <Help>
+      Set the low battery value.
+      </Help>
+    </Value>
+    <Value type="int" index="111" genre="config" label="Battery Report Interval" min="0" max="4294967295" value="0">
+      <Help>
+      Set the interval time of battery report.
+      Value=0, disable the battery report for a interval time.
+      Value=1 to 0x7FFFFFFF, the interval time of battery report is
+      set.
+      Note:
+      1, if the value is less than 10, the time unit is second.
+      If the value is more than 10, the time unit is 4 minutes, which
+      means if the value is more than 10 and less than 240, the
+      interval time is 4 minutes. If the value is more than 240 and
+      less than 480, the interval is 8 minutes.
+      2, if the current battery report falls below the low battery
+      value (configurable parameter 39), it will send battery
+      report=0xFF.
+      </Help>
+    </Value>
+    <Value type="int" index="121" genre="config" label="Report type sent" units="" value="256">
+      <Help>
+	Defines the type of report sent. 
+	 Value 1 (msb) Reserved
+	 Value 2 Reserved
+	 Value 3 bits 7-1 reserved
+	         bits 0 - Basic Report
+	 Value 4 (lsb) bits 7-4 reserved
+                     bit 3 Sensor Binary
+		     bit 2-0 reserved
+      </Help>
+    </Value>
+    <Value type="int" index="255" genre="config" label="Reset default configuration" units="" value="0" write_only="true" affects="all">
+      <Help>
+	Reset to the default configuration.
+      </Help>
+    </Value>
+  </CommandClass>
+
+
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="1">
+      <Group index="1" max_associations="5" label="Lifeline" auto="true" />
+    </Associations>
+  </CommandClass>
+</Product>
+
