@@ -1,0 +1,83 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+
+	<CommandClass id="112" name="COMMAND_CLASS_CONFIGURATION">	 
+
+		<Value type="list" genre="config"  index="1" label="Operation mode" units=""  value="1">
+			<Item label="Off" value="0" />
+			<Item label="Heat (Default)" value="1" />
+			<Item label="Cool" value="2" />
+			<Item label="Energy save heat." value="11" />
+		</Value>
+		
+		<Value type="list" genre="config"  index="2" label="Temperature sensor" units=""  value="1">
+			<Item label="F - Floor mode: Regulation is based on the floor temperature sensor reading." value="0" />
+			<Item label="A - Room temperature mode: Regulation is based on the measured room temperature using the internal sensor (Default)." value="1" />
+			<Item label="AF - Room mode w/floor limitations: Regulation is based on internal room sensor but limited by the floor temperature sensor (included) ensuring that the floor temperature stays within the given limits (FLo/FHi." value="2" />
+			<Item label="A2 - Room temperature mode: Regulation is based on the measured room temperature using the external sensor." value="3" />
+			<Item label="P (Power regulator): Constant heating power is supplied to the floor. Power rating is selectable in 10% increments ( 0% - 100%)." value="4" />
+			<Item label="FP - Floor mode with minimum power limitation: Regulation is based on the floor temperature sensor reading, but will always heat with a minimum power setting (PLo)." value="5" />
+		</Value>
+
+		<Value type="list" genre="config"  index="3" label="Floor sensor type" value="0">
+			<Item label="10k ntc (Default)" value="0" />
+			<Item label="12k ntc (Default)" value="1" />
+			<Item label="15k ntc (Default)" value="2" />
+			<Item label="22k ntc (Default)" value="3" />
+			<Item label="33k ntc (Default)" value="4" />
+			<Item label="47k ntc (Default)" value="5" />
+		</Value>
+		
+		<Value type="byte" index="4" genre="config" label="DIFF l. Temperature control Hysteresis" units="" min="3" max="30" size="1" value="5">
+			<Help>3-30 (0,2°C - 3.0°C)
+			</Help>
+		</Value>
+
+		<Value type="byte" index="5" genre="config" label="FLo: Floor min limit" units="" min="50" max="400" size="1" value="50">
+			<Help>50-400 (5.0°C - 40.0°C)
+			</Help>
+		</Value>
+				
+		<Value type="byte" index="6" genre="config" label="FHi: Floor max limit" units="" min="50" max="400" size="1" value="400">
+			<Help>50-400 (5.0°C - 40.0°C)
+			</Help>
+		</Value>
+		
+		<Value type="byte" index="7" genre="config" label="ALo: Air min limit" units="" min="50" max="400" size="1" value="50">
+			<Help>50-400 (5.0°C - 40.0°C)
+			</Help>
+		</Value>
+				
+		<Value type="byte" index="8" genre="config" label="AHi: Air max limit" units="" min="50" max="400" size="1" value="400">
+			<Help>50-400 (5.0°C - 40.0°C)
+			</Help>
+		</Value>
+				
+		<Value type="byte" index="9" genre="config" label="PLo: Min temperature in Power Reg Mode" units="" min="0" max="9" size="1" value="0">
+			<Help>0-9. Min temperature in Power Regulator Mode (setting 2. Temperature sensor - P)
+			</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="10" label="CO mode setpoint" size="1" min="50" max="400" value="210">
+			<Help>50-400 (5.0°C - 40.0°C)</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="11" label="ECO mode setpoint" size="1" min="50" max="400" value="180">
+			<Help>50-400 (5.0°C - 40.0°C)</Help>
+		</Value>
+		
+		<Value type="short" index="12" genre="config" label="P setting" units="" min="0" max="10" size="1" value="2">
+			<Help>0-10
+			</Help>
+		</Value>
+	</CommandClass>
+
+	<CommandClass id="133" name="COMMAND_CLASS_ASSOCIATION">
+		<Associations num_groups="5">
+			<Group index="1" max_associations="1" label="‘Lifeline’. All run-time reporting is addressed to this group." auto="true"/>
+			<Group index="2" max_associations="8" label="‘On/Off control’. This controls external heaters replicating the state of the internal relay." auto="false"/>
+		</Associations>
+	</CommandClass>
+		
+
+</Product>
